--- a/.github/workflows/ios-ci.yaml
+++ b/.github/workflows/ios-ci.yaml
@@ -1,54 +1,28 @@
-name: Flutter_iOS_CI
+name: iOS_ci2
 
 on:
   workflow_dispatch:
-#  push:
-#    branches: [develop]
-#  pull_request:
-#    branches: [develop]
+    inputs:
+      upload-to-testflight:
+        description: '上传到App Store Connect'
+        required: false
+        type: boolean
+      upload-to-pgy:
+        description: '上传到蒲公英'
+        required: false
+        type: boolean
 
 jobs:
-  build_ios:
+  build-ios:
+    name: build
     runs-on: macos-latest
     env:
-      SHEME: Runner
-      BUILD_CONFIGURATION: Release
-      TEAM_ID: X6MGTJ5P49
-      PROVISIONING_PROFILE: MusicLabAppProfileDistribution
-      CODE_SIGN_IDENTITY: "iPhone Distribution: Changsha Zhiliao Information Technology Co., Ltd (X6MGTJ5P49)"
+      UPLOAD_TO_TESTFLIGHT: ${{ inputs.upload-to-testflight }}
+      UPLOAD_TO_PGY: ${{ inputs.upload-to-pgy }}
 
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
-
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.P12_RELEASE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64_RELEASE }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-
-          # create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
       - name: Install and set Flutter version
         uses: subosito/flutter-action@v2
@@ -61,33 +35,42 @@ jobs:
       - name: pod repo update
         run: pod repo update
 
-      - name: Build Flutter
-        run: flutter build ios --release --no-codesign
+      - name: flutter build ios
+        if: env.UPLOAD_TO_PGY == 'true'
+        uses: cedvdb/action-flutter-build-ios@v1
+        with:
+          build-cmd: flutter build ipa --release --export-options-plist=ios/ExportOptions-debug.plist
+          certificate-base64: ${{ secrets.P12_RELEASE_BASE64_DEBUG }}
+          certificate-password: ${{ secrets.P12_PASSWORD_DEBUG }}
+          provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64_DEBUG }}
+          keychain-password: ${{ secrets.KEYCHAIN_PASSWORD_DEBUG }}
 
-      - name: Build resolve Swift dependencies
-        run: xcodebuild -resolvePackageDependencies -workspace ios/Runner.xcworkspace -scheme ${{ env.SHEME }} -configuration ${{ env.BUILD_CONFIGURATION }}
+      - name: flutter build ios
+        if: env.UPLOAD_TO_TESTFLIGHT == 'true'
+        uses: cedvdb/action-flutter-build-ios@v1
+        with:
+          build-cmd: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+          certificate-base64: ${{ secrets.P12_RELEASE_BASE64 }}
+          certificate-password: ${{ secrets.P12_PASSWORD }}
+          provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64_RELEASE }}
+          keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
 
-      - name: Build xArchive
+      - name: Archive IPA
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-ipa
+          path: build/ios/ipa/VideoAI.ipa
+
+      - name: 'Upload file to test flight using CLI'
+        if: env.UPLOAD_TO_TESTFLIGHT == 'true'
         run: |
-          xcodebuild -workspace ios/Runner.xcworkspace -scheme ${{ env.SHEME }} -configuration ${{ env.BUILD_CONFIGURATION }} DEVELOPMENT_TEAM=${{ env.TEAM_ID }} -sdk 'iphoneos' -destination 'generic/platform=iOS' -archivePath build-output/app.xcarchive PROVISIONING_PROFILE=${{ env.PROVISIONING_PROFILE }} clean archive CODE_SIGN_IDENTITY="${{ env.CODE_SIGN_IDENTITY }}"
-      - name: Export ipa
-        run: xcodebuild -exportArchive -archivePath build-output/app.xcarchive -exportPath build-output/ios -exportOptionsPlist ios/ExportOptions.plist
-
-      #      - name: 'Upload file to test flight using CLI'
-      #        run: |
-      #          echo "Starting upload."
-      #          xcrun altool --upload-app -t ios -f build-output/ios/VideoAI.ipa -u ${{ secrets.APPLEID_USERNAME }} -p ${{ secrets.APPLEID_PASSWORD }} --verbose
+          echo "Starting upload."
+          xcrun altool --upload-app -t ios -f "build/ios/ipa/VideoAI.ipa" -u ${{ secrets.APPLEID_USERNAME }} -p ${{ secrets.APPLEID_PASSWORD }} --verbose
 
       - name: Upload PGYER File
-        id: pgyer
-        uses: xtayga/upload-pgyer-action@master
+        if: env.UPLOAD_TO_PGY == 'true'
+        uses: PGYER/pgyer-upload-app-action@v1.3
         with:
-          url: https://www.pgyer.com/apiv2/app/upload
-          forms: '{"_api_key":"${{ secrets.PGY_KEY }}","buildName":"RSS"}'
-          fileForms: '{"file":"build-output/ios/VideoAI.ipa"}'
-
-#      - name: Publish iOS Artefacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: release-ios
-#          path: build-output/ios
+          _api_key: ${{ secrets.PGY_KEY }}
+          appFilePath: build/ios/ipa/VideoAI.ipa
+          buildUpdateDescription: '~~~'
