--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.4.2
+#  flutter_native_splash: ^2.4.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -75,6 +75,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
+#flutter_native_splash:
+#  color: "#000000"  # 启动页的背景颜色，可以设置为你想要的任何颜色
+#  image: "images/icon/logo.png"  # 启动页显示的图片路径（通常是一个 logo）
+#  android: true  # 启用 Android 启动页
+#  ios: true
 
 flutter_icons:
   android: true
