--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   easy_refresh: ^3.4.0
   advertising_id: ^2.7.0
   video_player: ^2.9.1
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
