--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission
         android:name="android.permission.INTERNET"/>
     <application
-        android:label="Video Ai"
+        android:label="VideoAI"
         android:name="${applicationName}"
         android:extractNativeLibs="true"
         android:icon="@mipmap/ic_launcher">
