新增积分使用记录页面，设置页面调整

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,10 @@
 		<string>Allow access to photos to generate videos.</string>
 		<key>NSUserNotificationUsageDescription</key>
 		<string>We need notification permissions to send important message alerts.</string>
+		<key>LSApplicationQueriesSchemes</key>
+        <array>
+          <string>mailto</string>
+        </array>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 		<key>UILaunchStoryboardName</key>
