--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   equatable: ^2.0.5
   dart_des: ^1.0.2
   in_app_purchase: ^3.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
