--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,33 +35,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  dio: ^5.5.0+1
+  dio: ^5.7.0
   curl_logger_dio_interceptor: ^1.0.0
   get: ^4.6.6
-  cached_network_image: ^3.4.0
-  url_launcher: ^6.3.0
+  cached_network_image: ^3.4.1
+  url_launcher: ^6.3.1
   permission_handler: ^11.3.1
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   image_picker: ^1.1.2
-  shared_preferences: ^2.2.3
-  package_info_plus: ^8.0.1
-  fluttertoast: ^8.2.6
-  share_plus: ^10.0.0
+  shared_preferences: ^2.3.3
+  package_info_plus: ^8.1.1
+  fluttertoast: ^8.2.8
+  share_plus: ^10.1.2
   encrypt: ^5.0.3
-  file_picker: ^8.1.2
-  firebase_analytics: ^11.2.1
-  firebase_core: ^3.3.0
-  firebase_auth: ^5.1.4
-  google_sign_in: ^6.2.1
-  sign_in_with_apple: ^6.1.1
+  file_picker: ^8.1.4
+  firebase_analytics: ^11.3.5
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
+  sign_in_with_apple: ^6.1.3
   dotted_decoration: ^2.0.0
   app_settings: ^5.1.1
 
   #上传图片依赖
-  amazon_cognito_identity_dart_2: ^3.6.5
+  amazon_cognito_identity_dart_2: ^3.7.0
   easy_refresh: ^3.4.0
   cached_video_player_plus: ^3.0.3
-  flutter_cache_manager: ^3.4.1
 
 
   equatable: ^2.0.5
@@ -72,7 +71,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.1
   flutter_native_splash: ^2.4.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
