--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,5 +40,14 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        ## dart: PermissionGroup.photosAddOnly
+        'PERMISSION_PHOTOS_ADD_ONLY=1',
+        ## 如果需要访问完整相册权限（可选）
+        'PERMISSION_PHOTOS=1',
+      ]
+    end
   end
 end
