--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,8 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow access to photos to save videos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow access to photos to generate videos.</string>
 	<key>NSUserNotificationUsageDescription</key>
