--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   sign_in_with_apple: ^6.1.3
   dotted_decoration: ^2.0.0
   app_settings: ^5.1.1
+  path: ^1.8.3
 
   #上传图片依赖
   amazon_cognito_identity_dart_2: ^3.7.0
