--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ flutter:
 
   assets:
     - images/icon/
+    - images/video/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
