--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,7 +107,7 @@ flutter:
 
   assets:
     - images/icon/
-    - images/video/
+    - videos/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
