提示词详情页跳转创作页逻辑处理，ios相机权限处理，提示词、特效详情、会员购买页面遮罩处理，限制CustomButton文本最大宽度

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,8 @@ post_install do |installer|
         'PERMISSION_PHOTOS_ADD_ONLY=1',
         ## 如果需要访问完整相册权限（可选）
         'PERMISSION_PHOTOS=1',
+        ## 如果需要访问相机权限
+        'PERMISSION_CAMERA=1',
       ]
     end
   end
