--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   intl: ^0.19.0
   gallery_saver_plus: ^3.2.1
   lottie: ^3.1.3
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
