--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   gallery_saver_plus: ^3.2.1
   lottie: ^3.1.3
   visibility_detector: ^0.4.0+2
+#  crop_your_image: ^1.1.0
+#  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
