--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,7 +88,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter_native_splash:
-  color: "#7631EC"  # 启动页的背景颜色，可以设置为你想要的任何颜色
+  color: "#2A003D"  # 启动页的背景颜色，可以设置为你想要的任何颜色
   image: "assets/images/ic_little_logo.png"  # 启动页显示的图片路径（通常是一个 logo）
   android: true  # 启用 Android 启动页
   ios: true
