--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   amazon_cognito_identity_dart_2: ^3.7.0
   easy_refresh: ^3.4.0
   cached_video_player_plus: ^3.0.3
+  video_player: ^2.9.2
+  scrollview_observer: ^1.24.0
+  waterfall_flow: ^3.1.0
 
 
   equatable: ^2.0.5
